# AnkiProject

./: .gitignore  LICENSE  Procfile  README.md  anki.cabal  erl_crash.dump  server.crt  server.key  stack.yaml
anki/: .~lock.anki_list.csv#  anki.cabal  anki_list.csv  anki_list2.csv  ankidb.txt  ankidb2.txt  stack.yaml
anki/Bridge/: Main.hs
anki/src/: Accounts.hs  Anki.hs  DB.hs  ElmTypes.hs  Lib.hs
anki/src/Accounts/: User.hs
anki/src/Anki/: AnkiCard.hs
anki_frontend/: Makefile  elm-package.json  encoders.txt  package.json
anki_frontend/elm-stuff/: exact-dependencies.json
anki_frontend/elm-stuff/build-artifacts/0.18.0/rtfeldman/elm-validate/1.1.3/: Validate.elmo
anki_frontend/elm-stuff/build-artifacts/0.18.0/user/project/1.0.0/: Data-AnkiCard.elmi  Data-AnkiCard.elmo  Data-Card.elmi  Data-Card.elmo  Data-Session.elmi  Data-Session.elmo  Data-User.elmi  Data-User.elmo  Main.elmi  Main.elmo  Page-Errored.elmi  Page-FlashCard.elmi  Page-FlashCard.elmo  Page-Home.elmi  Page-Home.elmo  Page-Login.elmi  Page-NotFound.elmi  Page-NotFound.elmo  Repl.elmi  Repl.elmo  Route.elmi  Route.elmo  Stylesheets.elmi  Stylesheets.elmo  Styling-MyCss.elmi  Styling-MyCss.elmo  Views-Form.elmi  Views-Form.elmo  Views-Page.elmi  Views-Page.elmo
anki_frontend/src/: Main.elm  Route.elm
anki_frontend/src/Data/: AnkiCard.elm  Card.elm  User.elm
anki_frontend/src/Page/: FlashCard.elm  Home.elm  Login.elm
anki_frontend/src/Styling/: MyCss.elm
anki_frontend/src/Views/: Form.elm  Page.elm
src/: Accounts.hs  Anki.hs  App.hs  Auth.hs  Configs.hs  DB.hs  ElmTypes.hs  Lib.hs  anki_list.csv
src/Accounts/: User.hs
src/Anki/: AnkiCard.hs
test/: Spec.hs
web/: Makefile  elm-package.json  index.css  package-lock.json  package.json
web/elm-stuff/: exact-dependencies.json
web/elm-stuff/build-artifacts/0.18.0/rtfeldman/elm-validate/1.1.3/: Validate.elmi
web/elm-stuff/build-artifacts/0.18.0/truqu/elm-base64/2.0.2/: Base64-Encode.elmi  Base64-Encode.elmo
web/elm-stuff/build-artifacts/0.18.0/user/project/1.0.0/: Data-AnkiCard.elmi  Data-AnkiCard.elmo  Data-Session.elmi  Data-Session.elmo  Data-User.elmi  Data-User.elmo  Main.elmi  Main.elmo  Page-Errored.elmi  Page-FlashCard.elmi  Page-FlashCard.elmo  Page-Home.elmi  Page-Home.elmo  Page-Login.elmi  Page-Login.elmo  Page-NotFound.elmi  Repl.elmi  Repl.elmo  Route.elmo  Styling-MyCss.elmi  Views-Form.elmo
web/src/: Main.elm  Route.elm  Stylesheets.elm  Util.elm
web/src/Data/: AnkiCard.elm  Session.elm  User.elm  User_2.elm
web/src/Page/: FlashCard.elm  Home.elm  Login.elm  NotFound.elm
web/src/Styling/: MyCss.elm
web/src/Views/: Page.elm
