name:                anki
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/anki#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Accounts
                     , Accounts.User
                     , DB
                     , Anki
                     , Anki.AnkiCard
                     , Auth
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , binary
                     , bytestring
                     , containers >= 0.5.7
                     , vector
                     , cassava
                     , time
                     , text
                     , split
                     , zlib
                     , stm
                     , bson
                     , servant-server
                     , servant
                     , jose-jwt
                     , elm-export
                     , wai
                     , wai-cors
                     , wai-extra
                     , wai-logger
                     , warp
                     , servant-elm
  default-language:    Haskell2010

executable anki-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , anki
                     , aeson
                     , zlib
  default-language:    Haskell2010

executable elm-type
  hs-source-dirs:      src
  main-is:             ElmTypes.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is ElmTypes
  other-modules:       Accounts
                     , Accounts.User
                     , Anki
                     , Anki.AnkiCard
                     , Auth
  build-depends:       base
                     , anki
                     , aeson
                     , binary
                     , wai
                     , bytestring
                     , containers
                     , vector
                     , cassava
                     , text
                     , stm
                     , servant-server
                     , servant
                     , jose-jwt
                     , elm-export
                     , servant-elm
  default-language:    Haskell2010

test-suite anki-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , anki
                     , hspec
                     , hspec-wai
                     , hspec-wai-json

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/anki
